syntax = "proto2";
package oneflow;

message Address {
  required string host = 1;
  required int32 port = 2;
}

message ProcessCtx {
  repeated Address ctrl_addr = 1;
  required int64 rank = 2;
  required int64 node_size = 3;
  required RankInfoInCluster rank_info_in_cluster = 4;
}

message BootstrapConf {
  required Address master_addr = 1;
  required int64 rank = 2;
  required int64 world_size = 3;
  optional string host = 4;
  optional int32 ctrl_port = 5 [default = -1];
  optional int64 node_size = 6 [default = -1];
}

message NumProcessDistribution {
  repeated int64 num_process = 1;
}

message RankInfoInCluster {
  required NumProcessDistribution num_process_distribution = 1;
  map<int64, int64> rank2node_id = 2;
  map<int64, int64> node_id2rankoffset = 3;
}
